testdata/cases/analyze/invalid_url.go
package analyze_cases

import "net/url"

func parseInvalidURL() {
	url.Parse(":")
}
